[gd_scene load_steps=5 format=3 uid="uid://yr7unnis4qow"]

[ext_resource type="Script" uid="uid://dingorsklv5or" path="res://scripts/component/fish_sprite.gd" id="1_2sono"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2sono"]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hvfl6"]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_udha5"]
light_mode = 1

[node name="FishSprite" type="Node2D"]
material = SubResource("CanvasItemMaterial_2sono")
script = ExtResource("1_2sono")

[node name="Base" type="AnimatedSprite2D" parent="."]

[node name="Outline" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_hvfl6")

[node name="Eye" type="AnimatedSprite2D" parent="."]
visible = false
material = SubResource("CanvasItemMaterial_udha5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="PingedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="PingedTimer" to="." method="_on_pinged_timer_timeout"]
